--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">I Am Poor</string>
-    <string name="title_1">I am</string>
-    <string name="title_2">poor</string>
+    <string name="title_1">I am poor</string>
 </resources>
